plugins {
    id 'java'
    id 'maven-publish'
}

tasks.withType(JavaCompile) {
    options.encoding = 'UTF-8'
    options.forkOptions.jvmArgs.addAll(['--add-opens', 'jdk.compiler/com.sun.tools.javac.code=ALL-UNNAMED'])
}

group = 'org.github'
version = '1.0.0'

sourceCompatibility = JavaVersion.VERSION_16
targetCompatibility = JavaVersion.VERSION_16

repositories {
    maven {
        url 'https://papermc.io/repo/repository/maven-public/'
    }

    maven {
        url 'https://libraries.minecraft.net/'
    }

    maven {
        url 'https://repo.dmulloy2.net/repository/public/'
    }
}

dependencies {
    compileOnly 'io.papermc.paper:paper-api:1.17.1-R0.1-SNAPSHOT'
    compileOnly 'com.mojang:authlib:1.5.25'
}
